@@ -4,6 +4,7 @@ NOTE: Do not "tidy" or change the indenting here, or we break svn annotate
 0.59 To Be Released
     - Don't crash open file list dialog on unsaved files or without files
       (SEWI)
+    - Added a small survey for new Padre installation (SEWI)
 
 0.58 2010.03.08
     - Fixed "Open File In Existing Padre" for non-win32 (PDONELAN)
